edited manfiest due to des word limit

--- a/popup.html
+++ b/popup.html
@@ -167,6 +167,7 @@
     <script src="js/popup.js"></script>
   </head>
   <body>
+    <!--This extension allows you to block websites for a certain amount of time. In doing so, you will remain focused at the task at hand and increase your productivity.-->
     <div id="status">
       <div class="tabs">
         <a href="#" id="home-link" class="tab-link active">Home</a>
