removed block all button, added set pw button, readded unblock all, added set pw function

--- a/popup.html
+++ b/popup.html
@@ -205,7 +205,7 @@
             </div>
             <hr>
             <div class="center">
-              <input type="submit" class="big button-style" id="blockAll" value="Block All">
+              <input type="submit" class="big button-style" id="pw" value="Set Password">
             </div>
 
             <hr>
