commented out code relating to unblockall button, wip

--- a/popup.html
+++ b/popup.html
@@ -229,7 +229,7 @@
             </div>
             <div class="center">
               <input type="submit" class="button-style" id="save" value="Save List">
-              <input type="submit" class="big button-style" id="unblockAll" value="Unblock All">
+              <!--<input type="submit" class="big button-style" id="unblockAll" value="Unblock All">-->
             </div>
             <hr>
             <h4>Permablocked sites:</h4>
