--- a/redirect.html
+++ b/redirect.html
@@ -15,7 +15,7 @@
          h1{
          font-size: 36px;	
          top: 50%;
-         text-shadow: 3px 3px 0px rgba(0, 0, 0, 1);
+         text-shadow: 2px 2px 0px rgba(0, 0, 0, 1);
          }
          h2{
          font-size: 26px;
@@ -30,6 +30,9 @@
          margin-right: -50%;
          transform: translate(-50%, -50%);
          }
+         #motivationalQuote{
+         text-align: center;
+         }
          #text h1, h2{
          font-weight: bold;
          color:white;
@@ -40,11 +43,34 @@
          #res{
          color: black;
          }
+         blockquote {
+           background: #f9f9f9;
+           border-left: 10px solid #ccc;
+           margin: 1.5em 10px;
+           padding: 0.5em 10px;
+           quotes: "\201C""\201D""\2018""\2019";
+         }
+         blockquote:before {
+           color: #ccc;
+           content: open-quote;
+           font-size: 4em;
+           line-height: 0.1em;
+           margin-right: 0.25em;
+           vertical-align: -0.4em;
+         }
+         blockquote h1 {
+           display: inline;
+         }
       </style>
       <script src="js/jquery.js"></script>
       <script src="js/content.js"></script>
    </head>
    <body>
+      <div id="motivationalQuote">
+         <blockquote>
+            <h1 id="quote">hello</h1>
+         </blockquote>
+      </div>
       <div id='text'>
          <h1><span id="url"></span> is blocked</h1>
          <h2>Reason for blocking: <span id="res"></span></h2>
