created json file to store quotes, a quote is now randomly displayed each time a blocked site is visited

--- a/redirect.html
+++ b/redirect.html
@@ -44,6 +44,7 @@
          color: black;
          }
          blockquote {
+          font-size: 22px;
            background: #f9f9f9;
            border-left: 10px solid #ccc;
            margin: 1.5em 10px;
@@ -58,6 +59,7 @@
            margin-right: 0.25em;
            vertical-align: -0.4em;
          }
+
          blockquote h1 {
            display: inline;
          }
@@ -67,8 +69,8 @@
    </head>
    <body>
       <div id="motivationalQuote">
-         <blockquote>
-            <h1 id="quote">hello</h1>
+         <blockquote id="quote">
+            Hey there, beautiful.
          </blockquote>
       </div>
       <div id='text'>
