--- a/popup.html
+++ b/popup.html
@@ -132,9 +132,6 @@
          .ubDate{
          color: #B9121B;
          }
-         .wrap {
-         height: 260px;
-         }
          .center{
          text-align: center;
          }
@@ -220,7 +217,7 @@
             </div>
             <div class="center">
                <input type="submit" class="button-style" id="save" value="Save List">
-               <!--<input type="submit" class="big button-style" id="unblockAll" value="Unblock All">-->
+               <input type="submit" class="big button-style" id="unblockAll" value="Unblock All">
             </div>
             <hr>
             <h4>Permablocked sites:</h4>
