compressed the images to decrease size, removed con fund logo and replaced with text, updated manifest

--- a/popup.html
+++ b/popup.html
@@ -231,7 +231,7 @@
                   <li><a href="https://www.nrdc.org" target="_blank"><img class="charitiesSq" src="img/nrdcLogo.png"/></a></li>
                   <li><a href="https://www.oxfamamerica.org" target="_blank"><img class="charitiesLng" src="img/oxfamLogo.png"></a></li>
                   <li><a href="https://doctorswithoutborders.org/" target="_blank"><img class="charitiesLng" src="img/dwbLogo.png"></a></li>
-                  <li><a href="http://www.conservationfund.org/" target="_blank"><img class="charitiesLng" src="img/conFundLogo.png"></a></li>
+                  <li><a href="http://www.conservationfund.org/" target="_blank">The Conservation Fund</a></li>
                </ul>
             </div>
          </div>
